# indexer/docs/swagger.json
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.Batch"
+                            "$ref": "#/definitions/types.Batch"
                         }
                     },
                     "404": {
@@ -71,7 +71,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.Batch"
+                            "$ref": "#/definitions/types.Batch"
                         }
                     },
                     "400": {
@@ -126,7 +126,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.Batch"
+                            "$ref": "#/definitions/types.Batch"
                         }
                     },
                     "404": {
@@ -161,7 +161,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.Batch"
+                            "$ref": "#/definitions/types.Batch"
                         }
                     },
                     "400": {
@@ -205,78 +205,7 @@
         "big.Int": {
             "type": "object"
         },
-        "github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.Batch": {
-            "type": "object",
-            "properties": {
-                "hash": {
-                    "type": "string"
-                },
-                "newStateRoot": {
-                    "type": "string"
-                },
-                "number": {
-                    "type": "integer"
-                },
-                "oldStateRoot": {
-                    "type": "string"
-                },
-                "status": {
-                    "description": "\"pending\", \"proving\", \"ready\", \"submitted\"",
-                    "type": "string"
-                },
-                "timestamp": {
-                    "type": "integer"
-                },
-                "traces": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.ExecutionTrace"
-                    }
-                },
-                "transactions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_nowafinance_nowa-zk_indexer_pkg_rpc.Transaction"
-                    }
-                }
-            }
-        },
-        "github_com_nowafinance_nowa-zk_indexer_internal_indexer_types.ExecutionTrace": {
-            "type": "object",
-            "properties": {
-                "contractAddress": {
-                    "description": "Set for contract deployments",
-                    "type": "string"
-                },
-                "from": {
-                    "type": "string"
-                },
-                "isContractDeployment": {
-                    "description": "True if this is a contract deployment",
-                    "type": "boolean"
-                },
-                "newBalance": {
-                    "type": "string"
-                },
-                "nonce": {
-                    "type": "integer"
-                },
-                "oldBalance": {
-                    "type": "string"
-                },
-                "to": {
-                    "description": "Empty for contract deployments",
-                    "type": "string"
-                },
-                "txHash": {
-                    "type": "string"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
-        "github_com_nowafinance_nowa-zk_indexer_pkg_rpc.Transaction": {
+        "rpc.Transaction": {
             "type": "object",
             "properties": {
                 "blockHash": {
@@ -336,6 +265,103 @@
                 },
                 "value": {
                     "$ref": "#/definitions/big.Int"
+                }
+            }
+        },
+        "types.Batch": {
+            "type": "object",
+            "properties": {
+                "hash": {
+                    "type": "string"
+                },
+                "newStateRoot": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
+                },
+                "oldStateRoot": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "\"pending\", \"proving\", \"ready\", \"submitted\"",
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "integer"
+                },
+                "traces": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.ExecutionTrace"
+                    }
+                },
+                "trades": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.ParsedTrade"
+                    }
+                },
+                "transactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/rpc.Transaction"
+                    }
+                }
+            }
+        },
+        "types.ExecutionTrace": {
+            "type": "object",
+            "properties": {
+                "contractAddress": {
+                    "description": "Set for contract deployments",
+                    "type": "string"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "isContractDeployment": {
+                    "description": "True if this is a contract deployment",
+                    "type": "boolean"
+                },
+                "newBalance": {
+                    "type": "string"
+                },
+                "nonce": {
+                    "type": "integer"
+                },
+                "oldBalance": {
+                    "type": "string"
+                },
+                "to": {
+                    "description": "Empty for contract deployments",
+                    "type": "string"
+                },
+                "txHash": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.ParsedTrade": {
+            "type": "object",
+            "properties": {
+                "messageHash": {
+                    "type": "string"
+                },
+                "pubKeyX": {
+                    "type": "string"
+                },
+                "pubKeyY": {
+                    "type": "string"
+                },
+                "sigR": {
+                    "type": "string"
+                },
+                "sigS": {
+                    "type": "string"
                 }
             }
         }
